--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
   <link rel="stylesheet" href="libraries/frameworks/bootstrap3/css/bootstrap.min.css">
   
   <link rel="stylesheet" href="libraries/frameworks/bootstrap3/css/main.css">
-  <link rel="stylesheet" href="libraries/highlighters/highlight/css/tomorrow.css" />
+  <link rel="stylesheet" href="libraries/highlighters/highlight.js/css/google_code.css" />
   <script src="libraries/frameworks/bootstrap3/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="libraries/frameworks/bootstrap3/js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
     <link rel=stylesheet href="libraries/widgets/quiz/css/demo.css"></link>
+<link rel=stylesheet href="./assets/css/custom.css"></link>
+<link rel=stylesheet href="./assets/css/moving_sidebar.css"></link>
 <link rel=stylesheet href="./assets/css/ribbons.css"></link>
-<link rel=stylesheet href="libraries/frameworks/bootstrap3/css/custom.css"></link>
-<link rel=stylesheet href="libraries/frameworks/bootstrap3/css/moving_sidebar.css"></link>
+<link rel=stylesheet href="./assets/css/table-styles.css"></link>
 <link rel=stylesheet href="http://fonts.googleapis.com/css?family=Vollkorn"></link>
 <link rel=stylesheet href="http://fonts.googleapis.com/css?family=Droid%20Sans%20Mono"></link>
 
@@ -49,7 +50,9 @@
         <div class="jumbotron">
           <div class="container">
             <h1>Ch 2 - One Way ANOVA Part 2</h1>
+            <h3>Chapter 2</h3>
             <h3>Stat 217</h3>
+            <h3>February 9, 2015</h3>
           </div>
         </div>
 
@@ -500,7 +503,7 @@ plot(lm1, which = c(1,3))
       <!-- Footer -->
       <footer id="top" role="footer">
         <div class="container text-center">
-          <span class="text-muted">Built by <a href="http://slidify.org/">Slidify</a>.  Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Theme by <a href="http://bootswatch.com/">Bootswatch</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</span>
+          <span class="text-muted">Built by <a href="http://slidify.org/">Slidify</a>.  Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</span>
         </div>
       </footer>
 
@@ -529,4 +532,9 @@ plot(lm1, which = c(1,3))
   </script> -->
   <script>window.MathJax || document.write('<script type="text/x-mathjax-config">MathJax.Hub.Config({"HTML-CSS":{imageFont:null}});<\/script><script src="libraries/widgets/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"><\/script>')
 </script>
-</html>
+<!-- LOAD HIGHLIGHTER JS FILES -->
+  <script src="libraries/highlighters/highlight.js/highlight.pack.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+  <!-- DONE LOADING HIGHLIGHTER JS FILES -->
+   
+  </html>
